--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "babel-preset-env": "1.6.0",
     "babel-preset-es2015": "6.24.1",
     "connect-livereload": "0.6.0",
-    "grunt": "0.4.5",
+    "grunt": ">=1.3.0",
     "grunt-babel": "7.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
